Bug 389592 - KMail2 View "disable Emoticons" option is not permanent
Summary: KMail2 View "disable Emoticons" option is not permanent
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 5.5.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 390439 390560 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-01-29 11:17 UTC by Don Curtis
Modified: 2018-02-16 14:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Don Curtis 2018-01-29 11:17:31 UTC
The View option of KMail2 to "disable Emoticons" is not permanent.

When KMail2 is restarted the enabled option reverts to disabled and has to be manually re-enabled -- each time.
Comment 1 Laurent Montel 2018-02-14 07:55:49 UTC
Git commit 8f34f7d882bbe21137c86a7d5d0f05d6d160d3c1 by Laurent Montel.
Committed on 14/02/2018 at 07:55.
Pushed by mlaurent into branch 'master'.

Fix Bug 389592 - KMail2 View "disable Emoticons" option is not permanent

FIXED-IN: 5.8.0

M  +4    -0    messageviewer/src/settings/messageviewer.kcfg.cmake
M  +5    -0    messageviewer/src/viewer/viewer_p.cpp

https://commits.kde.org/messagelib/8f34f7d882bbe21137c86a7d5d0f05d6d160d3c1
Comment 2 Laurent Montel 2018-02-14 10:45:30 UTC
*** Bug 390439 has been marked as a duplicate of this bug. ***
Comment 3 Till Schäfer 2018-02-16 14:58:36 UTC
*** Bug 390560 has been marked as a duplicate of this bug. ***