Fix Bug 389592 - KMail2 View "disable Emoticons" option is not permanent

FIXED-IN: 5.8.0
BUG: 389592