messageviewer/src/settings/messageviewer.kcfg.cmake
@@ -51,6 +51,10 @@ xsi:schemaLocation="http://www.kde.org/standards/kcfg/1.0 http://www.kde.org/sta
      <default>false</default>
    </entry>
 
+   <entry name="ShowEmoticons" type="Bool">
+     <default>true</default>
+   </entry>
+
   <entry name="AutoImportKeys" type="Bool">
       <default>false</default>
     </entry>
